--- a/.github/workflows/terrascan.yml
+++ b/.github/workflows/terrascan.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   terrascan:
      name: 'terrascan'
+     runs-on: ubuntu-latest
      steps: 
        - name: 'Run Terrascan'
          run: |
