--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,11 +26,12 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build, tag, and push image to Amazon ECR
-      id: build-image
+      id: get_version
+      run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: ${{ env.RELEASE_VERSION }}
       run: |
         # Build a docker container and
         # push it to ECR so that it can
