--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,18 +28,17 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: get_version
       run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ env.RELEASE_VERSION }}
+      
+    - name: Build, tag, and push image to Amazon ECR
       run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be deployed to ECS.
         set -x 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: nodejs
+        IMAGE_TAG: ${{ env.RELEASE_VERSION }}       
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
