--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,6 +30,7 @@ jobs:
       run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
       
     - name: Build, tag, and push image to Amazon ECR
+      id: build-image
       run: |
         set -x 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
