--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,13 +33,13 @@ jobs:
       id: build-image
       run: |
         set -x 
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_ID .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ env.GITHUB_RUN_ID }}       
+        IMAGE_TAG: ${{ RELEASE_VERSION }}       
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
