--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       id: get_version
-      run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+      run: echo ::set-env name=tag::$(echo ${GITHUB_REF:10})
       
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
@@ -39,7 +39,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ RELEASE_VERSION }}       
+        IMAGE_TAG: ${{ env.tag }}       
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
