--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,8 +30,7 @@ jobs:
       id: get_version
       run: |
         set -x 
-        tag=${git tag |tail -1}
-        echo ${tag}
+        git tag |tail -1 
         echo ::set-output name=tag::${tag}
       
     - name: Build, tag, and push image to Amazon ECR
