--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,10 +25,24 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    
+    - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@master"
+      - name: 'Get next minor version'
+        id: semvers
+        uses: "WyriHaximus/github-action-next-semvers@master"
+        with:
+          version: ${{ steps.previoustag.outputs.tag }}
+      - name: 'Create new milestone'
+        id: createmilestone
+        uses: "WyriHaximus/github-action-create-milestone@master"
+        with:
+          title: ${{ steps.semvers.outputs.patch }}
 
-    - name: Build, tag, and push image to Amazon ECR
-      id: get_version
-      run: echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
+#     - name: Build, tag, and push image to Amazon ECR
+#       id: get_version
+#       run: echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
       
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
@@ -40,7 +54,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG:   ${{ steps.get_version.outputs.tag }} 
+        IMAGE_TAG:   ${{ steps.createmilestone.outputs.tag }} 
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
