--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -41,7 +41,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ steps.get-version.outputs.tag }} 
+        IMAGE_TAG: ${{ steps.get_version.outputs.tag }} 
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
