--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,7 +5,9 @@ on:
     inputs:
       git-ref:
         description: Git Ref     
-        required: true
+        required: false
+    tags:
+        description: 'Test scenario tags'      
              
 jobs:
   deploy:
