--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,13 +2,10 @@
 name: 'GitHub Actions to build and push docker image to ECR'
 
 on: 
-  workflow_dispatch:
-    inputs:
-       git-ref:
-        description: Git Ref (Optional)
-        required: false
-
-             
+  push:
+    tags:
+      - v*.*.* 
+                   
 jobs:
   deploy:
     name: Deploy
