--- a/.github/workflows/aws-uat.yml
+++ b/.github/workflows/aws-uat.yml
@@ -2,9 +2,14 @@
 name: 'GitHub Actions to build and push docker image to ECR'
 
 on: 
-  push:
-    tags:
-      - v*.*.* 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'  
                    
 jobs:
   deploy:
