--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_UAT }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_UAT }}
+        aws-access-key-id: ${{ secrets.AWS_SECRET_KEY_ID_1 }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_1 }}
         aws-region: us-east-1
     
     - name: Pull the Image from Dev ECR
