--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Get Git Tag 
       id: get_version
-      run: "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: "##[set-output name=tag;]$(echo ${GITHUB_REF#refs/*/})"
       
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
