--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,13 +34,13 @@ jobs:
       id: build-image
       run: |
         set -x 
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_RUN_NUMBER"
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: $GITHUB_RUN_NUMBER
+        IMAGE_TAG: GITHUB_RUN_NUMBER
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
