--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,7 +40,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ github.run.number }}
+        IMAGE_TAG: ${{ github.run_number }}
 
    
 #    - name: Fill in the new image ID in the Amazon ECS task definition
