--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -20,3 +20,4 @@ jobs:
           registry: docker.pkg.github.com
           repository: rupesh2010/nodejs/nodejs
           tag_with_sha: true
+          tag_with_ref: true 
