--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,9 +26,6 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Get Git Tag 
-      id: get_version
-      run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
       
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
@@ -40,22 +37,14 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: nodejs
-        IMAGE_TAG: ${{ github.run_number }}
+        IMAGE_TAG: ${{ github.sha }}
 
-   
-#    - name: Fill in the new image ID in the Amazon ECS task definition
-#       id: task-def
-#      uses: aws-actions/amazon-ecs-render-task-definition@v1
-#      with:
-#        task-definition: task-definition.json
-#        container-name: sample-app
-#       image: ${{ steps.build-image.outputs.image }}
-
- #   - name: Deploy Amazon ECS task definition
- #     uses: aws-actions/amazon-ecs-deploy-task-definition@v1
- #     with:
- #       task-definition: ${{ steps.task-def.outputs.task-definition }}
- #       service: sample-app-service
- #       cluster: default
- #       wait-for-service-stability: true
+    - name: Push to GitHub Packages
+      uses: docker/build-push-action@v2
+      with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.pkg.github.com
+          repository: rupesh2010/nodejs/nodejs
+          tag_with_sha: true
 
