--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,5 +46,5 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
           repository: rupesh2010/nodejs/nodejs
-          tag_with_sha: true
+          tag: ${{ github.sha }}
 
