--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,4 +49,5 @@ jobs:
           registry: docker.pkg.github.com
           repository: rupesh2010/nodejs/nodejs
           IMAGE_TAG: ${{ github.sha }}
-
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: nodejs
