--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -27,6 +27,7 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
       
     - name: Push to GitHub Packages
+      id: push 
       uses: docker/build-push-action@v1
       with:
           username: ${{ github.actor }}
