--- a/.github/workflows/dogiecr.yml
+++ b/.github/workflows/dogiecr.yml
@@ -6,11 +6,14 @@ on:
       - v*.*.*.* 
         
 jobs:
+  deploy: 
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
