--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -4,7 +4,7 @@ name: 'GitHub Actions to build and push docker image to ECR'
 on: 
   push:
     branches:
-      - v*.*.*.* 
+      - master  
                    
 jobs:
   deploy:
