--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -33,7 +33,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: shivaramkhanal/nodejs/nodejs
+          repository: shivaramkhanal/nodejs
           tag_with_ref: true
 
       
