--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -46,7 +46,7 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nodejs
+        ECR_REPOSITORY: helloworld
         IMAGE_TAG: ${{ github.sha }}
 
    
