--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -36,7 +36,6 @@ jobs:
           repository: shivaramkhanal/nodejs/helloworld
           tag_with_ref: true
 
-      
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       run: |
@@ -48,6 +47,16 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: helloworld
         IMAGE_TAG: ${{ github.sha }}
+          
+    - name: Push Docker image to Docker Hub
+      id: push Docker
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v1
+      with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: my-docker-hub-namespace/my-docker-hub-repository
+          tag_with_ref: true   
 
    
           
