--- a/.github/workflows/aws1.yml
+++ b/.github/workflows/aws1.yml
@@ -53,7 +53,7 @@ jobs:
       with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: my-docker-hub-namespace/my-docker-hub-repository
+          repository: cbaram/aws1
           tag_with_ref: true   
 
    
